# gameproject

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/game/: dynamic-lib-export.hpp  game.cpp  game.hpp
src/interface/: dynamic-lib-import.hpp  interface.cpp  interface.hpp
